# gameoff

./: .gitignore  README.md  meson.build
include/: factory.hpp  helper.hpp  window.h
include/components/: acceleration.hpp  collision.hpp  position.hpp  renderable.hpp  spring.hpp  velocity.hpp
include/core/: loader.h  raw_model.hpp  renderer.h  shader_program.h
include/glad/: glad.h
include/impl/: basic_shader.h
include/util/: util.hpp
shaders/: basic.fs  basic.vs
src/: glad.cpp  main.cpp  window.cpp
src/core/: loader.cpp  renderer.cpp  shader_program.cpp
subprojects/: entt.wrap
